@@ -1,4 +1,4 @@
-.TH "sbatch" "1" "SLURM 1.3" "November 2007" "SLURM Commands"
+.TH "sbatch" "1" "SLURM 1.3" "December 2007" "SLURM Commands"
 .SH "NAME"
 .LP 
 sbatch \- Submit a batch script to SLURM.
@@ -22,6 +22,14 @@ runs a single copy of the batch script on the first node in the set of
 allocated nodes.
 .SH "OPTIONS"
 .LP 
+
+.TP
+\fB\-\-acctg\-freq\fR=\fIseconds\fR
+Define the job accounting sampling interval.
+This can be used to override the \fIJobAcctGatherFrequency\fR parameter in SLURM's
+configuration file, \fIslurm.conf\fR.
+A value of zero disables real the periodic job sampling and provides accounting
+information only on job termination (reducing SLURM interference with the job).
 
 .TP
 \fB\-B\fR \fB\-\-extra\-node\-info\fR=\fIsockets\fR[:\fIcores\fR[:\fIthreads\fR]]
