@@ -1,6 +1,6 @@
 \." $Id$
 .\"
-.TH SRUN "1" "November 2007" "srun 1.3" "slurm components"
+.TH SRUN "1" "December 2007" "srun 1.3" "slurm components"
 
 .SH "NAME"
 srun \- run parallel jobs
@@ -14,6 +14,14 @@ first create a resource allocation in which to run the parallel job.
 
 .SH "OPTIONS"
 .LP
+
+.TP
+\fB\-\-acctg\-freq\fR=\fIseconds\fR
+Define the job accounting sampling interval.
+This can be used to override the \fIJobAcctGatherFrequency\fR parameter in SLURM's 
+configuration file, \fIslurm.conf\fR.
+A value of zero disables real the periodic job sampling and provides accounting
+information only on job termination (reducing SLURM interference with the job).
 
 .TP
 \fB\-B\fR \fB\-\-extra\-node\-info\fR=\fIsockets\fR[:\fIcores\fR[:\fIthreads\fR]]
