@@ -1,4 +1,4 @@
-.TH "slurm.conf" "5" "October 2007" "slurm.conf 1.3" "Slurm configuration file"
+.TH "slurm.conf" "5" "December 2007" "slurm.conf 1.3" "Slurm configuration file"
 .SH "NAME"
 slurm.conf \- Slurm configuration file 
 .SH "DESCRIPTION"
@@ -200,9 +200,13 @@ must be configured.
 
 .TP
 \fBJobAcctGatherFrequency\fR
-Define the polling frequencys to pass to the job accounting plugin.
+Define the job accounting sampling interval.
 For jobacct_gather/none this parameter is ignored.
-For jobacct_gather/linux the parameter is a number is seconds between polls.
+For  jobacct_gather/aix and jobacct_gather/linux the parameter is a number is 
+seconds between sampling job state.
+The default value is 30 seconds. 
+A value of zero disables real the periodic job sampling and provides accounting 
+information only on job termination (reducing SLURM interference with the job).
 
 .TP
 \fBJobAcctStorageType\fR
