@@ -98,6 +98,7 @@ typedef struct sbatch_options {
 	bool no_kill;		/* --no-kill, -k		*/
 	bool no_requeue;	/* --no-requeue			*/
 	uint8_t open_mode;	/* --open-mode			*/
+	int acctg_freq;		/* --acctg-freq=secs		*/
 	bool overcommit;	/* --overcommit -O		*/
 	uint16_t shared;	/* --share,   -s		*/
 	int  quiet;
