@@ -355,6 +355,7 @@ static void _launch_job(struct job_record *job_ptr)
 	launch_msg_ptr->nodes = xstrdup(job_ptr->nodes);
 	launch_msg_ptr->overcommit = job_ptr->details->overcommit;
 	launch_msg_ptr->open_mode  = job_ptr->details->open_mode;
+	launch_msg_ptr->acctg_freq = job_ptr->details->acctg_freq;
 
 	if (make_batch_job_cred(launch_msg_ptr)) {
 		error("aborting batch job %u", job_ptr->job_id);
