@@ -6,10 +6,12 @@ documents those changes that are of interest to users and admins.
  -- Modify how strings are packed in the RPCs, Maximum string size 
     increased from 64KB (16-bit size field) to 4GB (32-bit size field).
  -- Fix bug that prevented time value of "INFINITE" from being processed.
- -- Add new srun/sbatch option "--open-mode" to control how output/error 
+ -- Added new srun/sbatch option "--open-mode" to control how output/error 
     files are opened ("t" for truncate, "a" for append).
  -- Added checkpoint/xlch plugin for use with XLCH (Hongjia Cao, NUDT).
  -- Added srun option --checkpoint-path for use with XLCH (Hongjia Cao, NUDT).
+ -- Added new srun/sbatch option "--acctg-freq" for user control over 
+    accounting data collection polling interval.
 
 * Changes in SLURM 1.3.0-pre7
 =============================
